new columns in inventory updated

--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -264,6 +264,12 @@
                         <th>Trade Name
                             <span class="large material-icons">import_export</span>
                         </th>
+                        <th>Amount Available
+                            <span class="large material-icons">import_export</span>
+                        </th>
+                        <th>Shelf
+                            <span class="large material-icons">import_export</span>
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -281,13 +287,14 @@
                                     <div class="col s12"><b><font size="+2">Ingredient Information</font></b></div>
                                     <div class="col s12">&nbsp;</div>
                                     <div class="col s6">
-                                        <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Received:</b> {{this.amt}} grams</span>
+                                        <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Available:</b> {{this.amt}} grams<b>Supplier:</b> {{this.supplier}}<br></br><b>TSCA Approved:</b> {{this.tsca_approved}}<br></br><b>MSDS: </b>Link</span>
                                         {{!-- <span>Ingredient:<br></br>Supplier:<br></br>Trade Name:<br></br>INCI Name:</span> --}}
                                     </div>
                                     <div class="col s6">
                                         {{!-- <span>Lot #:<br></br>Shelf #:<br></br>Amount Received:<br></br>Amount Available:</span> --}}
-                                        <span><b>Lot Number:</b> {{this.lot_num}}<br></br><b>Expiration Date:</b> {{this.expiration}}</span>
+                                        <span><b>Lot Number:</b> {{this.lot_num}}<br></br><b>Date Receieved:</b> {{this.date_received}}<br></br><b>Expiration Date:</b> {{this.expiration}}<br></br><b>COA: </b>Link</span>
                                     </div>
+
                                         <div class="col s12">&nbsp;</div>
                                         <div class="col s12 m6 l3"><p></p></div>
                                         <div class="col s12 m6 l3"><p></p></div>
@@ -315,6 +322,8 @@
                         </td>
 
                         <td>{{this.trade_name}}</td>
+                        <td>{{this.amt}} {{this.unit}}</td>
+                        <td>{{this.shelf}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
