--- a/views/project.hbs
+++ b/views/project.hbs
@@ -14,11 +14,13 @@
             {{#with project_data}}  
             <div>
                 <h1>{{project_name}}</h1>
+                
                 <p>All of the project details go here</p>
                 <p>More information goes here</p>
                 <p>Woah there's a lot of information</p>
                 <p>There's still more???</p>
                 <p>Okay I think we're finally done</p>
+                <p>Project formulas: {{formulas.formula_id}}</p>
             </div>
 
             <div class="back_button">
