js fixes for inventory

--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -287,12 +287,12 @@
                                     <div class="col s12"><b><font size="+2">Ingredient Information</font></b></div>
                                     <div class="col s12">&nbsp;</div>
                                     <div class="col s6">
-                                        <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Available:</b> {{this.amt}} grams<b>Supplier:</b> {{this.supplier}}<br></br><b>TSCA Approved:</b> {{this.tsca_approved}}<br></br><b>MSDS: </b>Link</span>
+                                        <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Available:</b> {{this.amt}} {{this.unit}}<b></b><b>Supplier:</b> {{this.supplier}}<br></br><b>TSCA Approved:</b> {{this.tsca_approved}}</span>
                                         {{!-- <span>Ingredient:<br></br>Supplier:<br></br>Trade Name:<br></br>INCI Name:</span> --}}
                                     </div>
                                     <div class="col s6">
                                         {{!-- <span>Lot #:<br></br>Shelf #:<br></br>Amount Received:<br></br>Amount Available:</span> --}}
-                                        <span><b>Lot Number:</b> {{this.lot_num}}<br></br><b>Date Receieved:</b> {{this.date_received}}<br></br><b>Expiration Date:</b> {{this.expiration}}<br></br><b>COA: </b>Link</span>
+                                        <span><b>Lot Number:</b> {{this.lot_num}}<br></br><b>Date Receieved:</b> {{this.date_received}}<br></br><b>Expiration Date:</b> {{this.expiration}}<br></br><b>COA: </b>Link<br></br><b>MSDS: </b>Link</span>
                                     </div>
 
                                         <div class="col s12">&nbsp;</div>
