--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -141,7 +141,7 @@
 
 
             </div>
-            <a href="/create" class="btn-floating btn-large orange fixed-action-btn">
+            <a href="/created" class="btn-floating btn-large orange fixed-action-btn">
                 <i class="large material-icons">create</i>
             </a>
         </div>
