--- a/views/project.hbs
+++ b/views/project.hbs
@@ -21,19 +21,7 @@
             <p><b>Date:</b> {{this.date}}</p>
             <p><b>Other Information:</b> </p>
 
-            {{!-- <a class="modal-trigger" href="#hi">
-                <span class="large material-icons">info_outline</span>
-            </a>
-            <div class="modal" id={{this}}>
-                <div class="row">
-
-                </div>
-                <div class="input-field" id="hi">
-                    <input type="text" id="name">
-                    <label for="name">Name</label>
-                </div> --}}
-
-                <a class="modal-trigger" href="#hi">
+             <a class="modal-trigger" href="#hi">
                     <span class="large material-icons">info_outline</span>
                 </a>
                 <div class="modal" id="hi">
@@ -81,7 +69,6 @@
 
                     </div>
                 </div>
-
                 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
                 <script
                     src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -91,12 +78,34 @@
                     })
                 </script>
             </div>
-
             <div class="back_button">
                 <a href="/projects" class="btn waves-effect waves-light">Go Back</a>
             </div>
-            {{/with}}
         </div>
+        {{/with}}
+
+        {{#each formula_data}}
+            <p><a href="/projects/{{this.project_id}}/formulas">Trial {{trial_num}}</a></p>
+        {{/each}}
+
+            {{!-- <a class="modal-trigger" href="#hi">
+                <span class="large material-icons">info_outline</span>
+            </a>
+            <div class="modal" id={{this}}>
+                <div class="row">
+
+                </div>
+                <div class="input-field" id="hi">
+                    <input type="text" id="name">
+                    <label for="name">Name</label>
+                </div> --}}
+
+               
+                        
+
+                
+
+            
 </body>
 
 </html>
