formulas page updates + nav bar

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Createlk</title>
+        <title>Create</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script type="text/javascript" src="/routes/create.js"></script>
