--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -36,8 +36,9 @@
                     </li>
                     <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
                     <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
-                    <li><a href="/formulas"><i class="material-icons">insert_chart</i>Formulas</a></li>
                     <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
+                    <li><a href="/archive"><i class="material-icons">archive</i>Archive</a></li>
+
                     {{!-- <li><a href="#"><i class="material-icons">create</i>Other</a></li> --}}
                 </ul>
 
