--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,55 +12,12 @@
             <script type="text/javascript" src="/routes/index.js"></script>
 
         </head>
-        
-        <body>
+                
 
+        <body>
         <!-- NAVIGATION SIDEBAR -->
         <div style="display: flex; justify-content:space-between;">
-            <div class="navbar" style="padding: 2% 2% 0% 2%">
-                <ul class="sidenav" id="mysidenav">
-                    <li>
-                        <div class="user-view">
-                            <div class="background">
-                                <img src="./views/luluble_hlogo.jpg" style="height:250px;" alt="">
-
-                            </div>
-                            <span style="color:#000000" class="large material-icons">local_florist
-                            </span>
-                            <span style="color:#25b5af"><b><font size="+2">&nbsp;tuluble database</font></b></span>
-                            <a href="#" data-target="side_nav"></a>
-                            {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
-                        </div>
-                    </li>
-                    <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
-                    <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
-                    <li><a href="/formulas"><i class="material-icons">insert_chart</i>Formulas</a></li>
-                    <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
-                    {{!-- <li><a href="#"><i class="material-icons">create</i>Other</a></li> --}}
-                </ul>
-
-                {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
-
-                <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
-                    <i class="material-icons">menu</i>
-                    <span class="blue-text text-darken-2"></span>
-                </a>
-
-                <!-- NAVIGATION SIDEBAR (location to put icon NEXT to the sidebar lines) -->
-                {{!-- <div class="col s6">
-                    <img src="/luluble_hlogo.jpg" class="responsive-img">
-                </div> --}}
-                {{!-- <span style="color:#000000" class="large material-icons">local_florist</span> --}}
-
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-                <script>
-                    document.addEventListener('DOMContentLoaded', function () {
-                        var side = document.querySelectorAll('.sidenav');
-                        M.Sidenav.init(side)
-                    })
-                </script>
-            </div>
+            {{> navbar}}
 
             <div class="logoutButton">
                 <a class = "waves-effect waves-light btn-small" class="logout" href="/logout">Log Out </a>
