logout button partial

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,11 +16,7 @@
         <div style="display: flex; justify-content:space-between;">
             {{> navbar}}
 
-            <div class="logoutButton">
-                <a class = "waves-effect waves-light btn-small" class="logout" href="/logout">Log Out </a>
-                <a style = ".pink_button"></a>
-                {{!-- <a class="logout" href="/logout">Log Out</a> --}}
-            </div>
+           {{> logout}}
         </div>
 
 
