--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -11,7 +11,11 @@
     </head>
 
     <body>
-        {{> navbar}}
+        <div style="display: flex; justify-content:space-between;">
+            {{> navbar}}
+
+            {{> logout}}
+        </div>
         <div style="padding: 2% 2% 0% 2%">
 
             <!-- https://materializecss.com/cards.html -->
