--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -84,38 +84,24 @@
         <div class="row">
             <div class="col s12">
                 <p></p>
-                <h1>Inventory </h1>
+                <h1>Archive </h1>
             </div>
 
-            <label>Classifier select</label>
-            <select class="browser-default">
-                <option value="0" disabled selected>Choose your classifier</option>
-                <option value="1">Thickeners</option>
-                <option value="2">Oils</option>
-                <option value="3">Butters</option>
-                <option value="4">Surfactants</option>
-                <option value="5">Functional/Active</option>
-                <option value="6">Preservatives</option>
-                <option value="7">Extracts/Fragrances/Flavor</option>
-                <option value="8">Experimental</option>
-                <option value="9">Colorants</option>
-                <option value="10">Absorbents</option>
-                <option value="11">pH Adjusters (Acids)</option>
-                <option value="12">pH Adjusters (Bases)</option>
-                <option value="13">Distilled Water/Ethyl Alcohol</option>
-            </select>
-
+             <div class="row">
+                <div class="col s12">
+                    <ul class="tabs">
+                        <li class="tab col s3"><a href="#ingredients">Ingredients</a></li>
+                        <li class="tab col s3"><a href="#projects">Projects</a></li>
+                    </ul>
+                </div>
+                <div id="ingredients" class="col s12">Ingredients</div>
+                <div id="projects" class="col s12">Projects</div>
+            </div>
+        
             <script>
-                function myfunc() {
-                    console.log("hello");
-                }
-                $(document).ready(function(){
-                    $('browser-default').formSelect();
+                f $(document).ready(function(){
+                    $('.tabs').tabs();
                 });
-
-                $('browser-default').formSelect('myfunc');
-                // $('select').formSelect('methodName', paramName);
-                
 
             </script>
 
@@ -149,43 +135,6 @@
 
         <!-- INVENTORY TABLE -->
         <div style="padding:20px">
-            {{!-- <div class="col s6"> 
-                <table class="inv-table" class="striped" class="responsive-table">
-                <tr>
-                    <th>Thickeners
-                        <span class="large material-icons">import_export</span>
-                    </th>
-                    <th>Oils</th>
-                    <th>Butters</th>
-                    <th>Surfactants</th>
-                    <th>Functional/Active</th>
-                    <th>Preservatives</th>
-                    <th>Extracts/Fagrances/Flavors</th>
-                    <th>Experimental</th>
-                    <th>Colorants</th>
-                    <th>Absorbents</th>
-                    <th>pH Adjusters (Acids)</th>
-                    <th>pH Adjusters (Bases)</th>
-                    <th>Distilled Water/Ethyl Alcohol</th>
-
-                    
-                </tr>
-                <tr>
-                    <td>Water 1</td>
-                    <td>Trade name 1</td>
-                    <td>INCI 1</td>
-                    <td>47.30</td>
-                    <td>94.6</td>
-                </tr>
-                <tr>
-                    <td>Water 1</td>
-                    <td>Trade name 1</td>
-                    <td>INCI 1</td>
-                    <td>47.30</td>
-                    <td>94.6</td>
-                </tr>
-                </table>
-            </div> --}}
 
             <table class="sortable">
                 <thead>
